2529 rebase spi to main (#440)
* some formatting changes to reflect the real changes

* removed get-all-hearing-types calls

* refactored judicialrole calls

* LPT-221: Disabled failing IT tests and added review comments

* LPT-221: Disabled failing IT tests and added review comments

* LPT-221: Fixed failing IT tests

* tests add

* sonar fix

* sonar fix

* LPT-221: Review comments related to Delete incorporated

* LPT-221: Review comments related to Delete incorporated

* LPT-221: Commented failing IT tests

* rebase fix

* LPT-177: Fixed failing tests

* LPT-221: Fixed flaky tests

* New 17.0.59-SPIPH2-SNAPSHOT

* updated status checking with some renamings

* increased code coverage

* removed unused variables

* refactored some unused code and namings

* removed unused class

* removed courtschedule query on duration enrichment for list courthearing

* hearingDurationService add

* renamed some classes&methods and extracted interface

* LPT-84: Fixed dependency versions

* Merge from main

* Fixed conflicts and tests

* Fixed conflicts and tests

* updated coredomain version

* updated progression version

* LPT-84 list Mags changes

* updated cursor settings

* added build paths to settings.json

* fixed sequence and hearingendDate

* fixed adhoc hearing flow

* crown enrichment

* added script for local development

* added project structure

* added command endpoint rule

* updates on cursor rules

* updated test strategy

* added a new structure for integration tests

* fixed sjp and adhoc hearing flows

* small refactor

* crown adjournment

* sjp duration autofix

* mags adjournment

* fixed remove hearing

* fixed adhoc hearing duration based

* adjournment journeys including multiday

* temp commit

* temp changes

* added new stub

* disabled some tests temporarily

* updates for sonar issues

* additions to updates for sonar issues

* disabled integration tests temporarily

* New 17.0.68-SPIPH2-SNAPSHOT

* Fixed immutablelist sort functionality

* Ne